@@ -1,3 +1,7 @@
+2007-11-27  Neal H. Walfield  <neal@gnu.org>
+
+	* server.c (server_loop): Add improve debugging output.
+
 2007-11-23  Neal H. Walfield  <neal@gnu.org>
 
 	* thread.h (thread_exregs): Take two additional arguments, a
